# llvm-phkit

./: .travis.yml  LICENSE  README.md  llvm-phkit.cabal  stack.yaml
app/: Main.hs
src/: Phkit.hs
src/Phkit/: Analysis.hs  Common.hs  Experimental.hs  FlattenTransform.hs  IO.hs  Phire.hs  SoftBoundTransform.hs  Transform.hs
src/Phkit/SoftBound/: Checker.hs  Common.hs  DeprecatedChecker.hs  DeprecatedTracker.hs  Lang.hs  Lattice.hs  Rewrite.hs  Tracker.hs  Transfer.hs
test/Phkit/: AnalysisSpec.hs  CommonSpec.hs  ExperimentalSpec.hs  FlattenTransformSpec.hs  IOSpec.hs  PhireSpec.hs  SoftBoundTransformSpec.hs  TestUtil.hs  TransformSpec.hs
test/testdata/: argbuf_buffer_overflow.c  argbuf_heap_overflow.c  argbuf_heap_overflow.ll  argbuf_heap_overflow_fptr_rewrite.c  argbuf_heap_overflow_fptr_rewrite.ll  buffer_overflow_1.c  buffer_overflow_1.ll  bzip2.bc  gzip.c  interpret-indirectbr.c  phv_normalization.c  virtual_function_table.cc
