name:                llvm-phkit
version:             0.1.0.0
synopsis:            A collection of LLVM passes for program hardening.
description:         Please see README.md
homepage             https://github.com/zchn/llvm-phkit
license-file:        LICENSE
author:              Kevin Chen
maintainer:          k_@berkeley.edu
copyright:           2016 Kevin Chen
category:            Compiler, Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Phkit
                     , Phkit.Analysis
                     , Phkit.Common
                     , Phkit.Experimental
                     , Phkit.IO
                     , Phkit.Phire
                     , Phkit.Transform
  build-depends:       base >= 4.7 && < 5
                     , bimap
                     , containers
                     , directory
                     , filepath
                     , hoopl == 3.10.2.1
                     , llvm-general >= 3.5 && <4
                     , llvm-general-pure >= 3.5 && <4
                     , mtl
                     , process
                     , temporary
  default-language:    Haskell2010

executable llvm-phkit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , llvm-general >= 3.5 && <4
                     , llvm-general-pure >= 3.5 && <4
                     , llvm-phkit
  default-language:    Haskell2010

test-suite llvm-phkit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bimap
                     , containers
                     , Diff
                     , filepath
                     , hoopl
                     , hspec
                     , hspec-discover
                     , llvm-general >= 3.5 && <4
                     , llvm-general-pure >= 3.5 && <4
                     , llvm-phkit
                     , mtl
                     , process
                     , regex-compat
                     , temporary
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

