name:                llvm-phkit
version:             0.1.0.0
author:              Kevin Chen
bug-reports:         https://github.com/zchn/llvm-phkit/issues
build-type:          Simple
cabal-version:       >= 1.10
category:            Compiler, Security
copyright:           (c) 2016 Kevin Chen
homepage:            https://github.com/zchn/llvm-phkit
license-file:        LICENSE
license:             Apache
maintainer:          Kevin Chen <k_@berkeley.edu>
stability:           experimental
synopsis:            LLVM passes for program hardening.
description:         Please see README.md
source-repository head
  type:              git
  location:          git://github.com/zchn/llvm-phkit.git

library
  hs-source-dirs:      src
  exposed-modules:     Phkit
                     , Phkit.Analysis
                     , Phkit.Common
                     , Phkit.Experimental
                     , Phkit.IO
                     , Phkit.Phire
                     , Phkit.Transform
  build-depends:       base >= 4.7 && < 5
                     , bimap
                     , containers
                     , directory
                     , filepath
                     , hoopl == 3.10.2.1
                     , llvm-general >= 3.5 && <4
                     , llvm-general-pure >= 3.5 && <4
                     , mtl
                     , process
                     , temporary
  default-language:    Haskell2010

executable llvm-phkit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , llvm-general >= 3.5 && <4
                     , llvm-general-pure >= 3.5 && <4
                     , llvm-phkit
  default-language:    Haskell2010

test-suite llvm-phkit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bimap
                     , containers
                     , Diff
                     , filepath
                     , hoopl
                     , hspec
                     , hspec-discover
                     , llvm-general >= 3.5 && <4
                     , llvm-general-pure >= 3.5 && <4
                     , llvm-phkit
                     , mtl
                     , process
                     , regex-compat
                     , temporary
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

